fix: 'coins' filter logic (overlapping properties)

--- a/src/components/Main/Home/Listings/_home-listings.scss
+++ b/src/components/Main/Home/Listings/_home-listings.scss
@@ -1,5 +1,5 @@
 .listings {
-  padding: 0 30px;
+  padding: 0 31px 0 30px;
 }
 
 .listings__body {
